Fix for LP#588599, mysqlbug#45377: ARCHIVE tables aren't discoverable after OPTIMIZE Fix based on code from Stewart Smith

storage/archive/ha_archive.cc:
  Ensure that the frm definition is stored in optimized tables.